2006-01-07 Perry
 PATCH: [ 1398064 ] Catalan translation update
 By Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc

2006-01-05 WinMerge experimental release 2.5.0.5 (cvs)

2006-01-04 Kimmo
 PATCH: [ 1393635 ] Save pane sizes and positions when they change
  Src: ChildFrm.cpp ChildFrm.h DiffViewBar.cpp DiffViewBar.h LocationBar.cpp
   LocationBar.h LocationView.cpp LocationView.h MergeDiffDetailView.cpp
   MergeDiffDetailView.h StdAfx.h
 PATCH: [ 1396413 ] Update Open dialog controls when its activated
  Src: OpenDlg.cpp OpenDlg.h

2006-01-04 Perry
 Cosmetic; normalizing blank lines to agree with English Merge.rc
  Src\Languages:
   Brazilian\MergeBrazilian.rc
   ChineseSimplified\MergeChineseSimplified.rc
   Korean\MergeKorean.rc
   Norwegian\MergeNorwegian.rc

2006-01-03 Kimmo
 PATCH: [ 1394877 ] Find selected text with Ctrl+F3
  Src: Merge.rc
  Src/editlib: ccrystaltextview.cpp
  Src/Language: */Merge*.rc
 PATCH: [ 1395584 ] Update CSizingControlBar to latest version
  Src: DiffViewBar.cpp DiffViewBar.h LocationBar.cpp LocationBar.h Merge.dsp StdAfx.h
  Src/Common: sizecbar.cpp sizecbar.h
  Src/Common new files: scbarg.cpp scbarg.h
  Src/Common deleted files: sizecbarg.cpp sizecbarg.h
 PATCH: [ 1383262 ] Fix bitmap leak in ShellExtension
  Also bump version number to 1.7.1
  Submitted by Perry
  ShellExtension: ShellExtension.rc WinMergeShell.cpp WinMergeShell.h

2006-01-03 Takashi
 PATCH: [ 1390104 ] fix for BUG: [ 1384069 ] Wrapped lines have incorrect column
  Src: MergeEditView.cpp
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h

2006-01-03 Perry
 BUG: [ 1390849 ] cvs trunk MergeChineseSimplified doesn't compile
  Src/Languages: ChineseSimplified: MergeChineseSimplified.rc
 PATCH: [ 1212161 ] Fix handling of \r\n in ByteComparator
  Src: ByteComparator.cpp

2006-01-02 Perry
 PATCH: [ 1383802 ] Cleanup line difference options in Editor-options
  Src: Merge.rc PropEditor.cpp PropEditor.h resource.h